Fix logo's centering and overflow

--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-  --header-height: 338px;
-  --header-margin-top:50px;
-  --nav-padding-bottom: 70px;
+  --logo-height: 332px;
+  --header-padding-top: 28px;
+  --header-padding-bottom: 16px;
 
   margin: 0;
   min-height: 100dvh;
@@ -79,7 +79,7 @@ nav {
   overflow: auto;
   height: 100dvh;
   min-width: 400px;
-  padding-bottom: var(--nav-padding-bottom);
+  padding-bottom: 70px;
 }
   nav img {
     max-width: 200px;
@@ -91,20 +91,23 @@ nav {
   }
 
 header {
-  width: 200px; 
-  padding-bottom: 0.5cm;
+  padding: var(--header-padding-top) 0 var(--header-padding-bottom);
+}
+
+header a {
+  display: flex;
+  justify-content: center;
+}
+
+header a:hover .logo {
+  background-position-x: 326px;
 }
 
 .logo {
-  display: block;
-  height: 332px;
+  height: var(--logo-height);
   width: 300px;
-  margin: 2rem 2rem 0rem;
-  padding-top: 0;
-  padding-bottom: 0.5cm;
+  margin: 0;
 }
-  .logo:hover { background-position-x: 326px; }
-
 
 .menu-toggle-btn, #menu-toggle  {
   display: none;
@@ -301,13 +304,15 @@ nav::-webkit-scrollbar {
 @media only screen
 and (max-width : 820px) {
   body {
+    --header-padding-top: 96px;
+    --header-padding-bottom: 28px;
     flex-direction: column;
   }
 
   body:has(#menu-toggle:checked) {
     overflow: hidden;
-    /* Give an offset to the top to preserve the size of the page, so the scroll position was correct once the menu is closed. */
-    padding-top: calc(var(--header-height) + var(--header-margin-top) + var(--nav-padding-bottom));
+    /* Give an offset to the top to preserve the size of the page, for the scroll position to be correct once the menu is closed and the header is hidden. */
+    padding-top: calc(var(--logo-height) + var(--header-padding-top) + var(--header-padding-bottom));
   }
 
   body:has(#menu-toggle:checked) nav {
@@ -316,6 +321,7 @@ and (max-width : 820px) {
     height: 100dvh;
     overflow: auto;
     position: fixed;
+    padding-bottom: 70px;
 
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
@@ -341,6 +347,7 @@ and (max-width : 820px) {
     overflow: initial; /* Having this set to "initial", makes it so the scroll position will be restored when the mobile navigation is opened again, otherwise it is reset each time the .main-nav is closed. (For some reason) */
     width: 100%;
     z-index: 10;
+    padding: 0;
   }
 
   .menu-toggle-btn {
@@ -363,10 +370,9 @@ and (max-width : 820px) {
     display: flex;
     align-items: end;
     gap: 0.6em;
-    /*text-transform: uppercase;*/
     padding: 0.3em 1.5em 0.5em 1.2em;
     line-height: 1;
-    border: 1px solid #706961; /* !!!!!!!!!!!!!!! */
+    border: 1px solid #706961;
     width: fit-content;
     user-select: none;
     cursor: pointer;  
@@ -390,24 +396,6 @@ and (max-width : 820px) {
 
   .menu-index {
     display: none;
-  }
-
-  header {
-    overflow: hidden;
-    height: var(--header-height);
-    width: unset; 
-    padding-bottom: 0;
-    margin-top: var(--header-margin-top);
-  }
-  .logo {
-    margin: 0;
-    margin-left: calc(50vw - 160px);
-    padding-bottom: 0;
-    position: relative;
-
-
-    /* WTF?! */
-    top: var(--header-margin-top);
   }
 
   article {
